# FAIRWork-AI-Service-Catalog

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
resources/: OutputKB.json  OutputKB_Final.json  OutputKBv2.json  ServiceOutput.json  availabilities.json  crf_service_input.json  crf_service_input2.json
resources/historic_data/: 005fd10a-0515-4cd9-b3c3-a7c742f392fd.csv  050f126d-d39d-4986-a140-663d151ad1bf.csv  0732b5d1-69c2-438c-855b-db077b7cb080.csv  0949f255-a301-4a05-95c5-93e663589525.csv  0b411500-d319-4d52-9875-cea685583e9c.csv  0c88b488-42c2-4452-abab-6ef20341793a.csv  0e02fe8f-5a85-4c9a-9ab4-208d9ed42cb1.csv  11e11c33-82ed-4094-8dac-6ceec185502e.csv  14bae7bb-df20-47a2-a994-095f1ab4e616.csv  159fe5d3-4df0-4e5f-a5c3-511f99a37775.csv  16d50dd6-9a32-401a-93a9-8f515c1d3460.csv  18d91516-6863-4250-bdeb-8855aa750020.csv  194fe9a1-17fc-4627-9843-3d7c18c202c3.csv  19db9c20-9dd6-499f-a5b0-5582c19f5eff.csv  211c03d3-1462-4310-8c5a-321375bd0772.csv  217f0353-2174-4fbe-a6a6-defe999ff4ba.csv  25a53c58-a924-4335-bd94-53d7049f2e4b.csv  3272c6fd-6b27-4ae7-8dd2-44c6091d6a79.csv  33906d30-cd45-4a7d-8f7d-8bc935076bba.csv  379efb64-bbfe-40e8-9227-baf37483f5df.csv  3d2e45b3-0ed3-4ed9-a6cb-9d27b9c91a0b.csv  3e0e33f8-0bf7-46ef-98c3-ef9c065017aa.csv  4459e2d7-1dff-40f8-a843-0326223c820d.csv  44be3f24-db2b-491e-a23c-1d0a3b41b313.csv  4ccb2cc9-ff13-4bbf-8c1c-0ead479e3cb0.csv  4fe52790-d427-4f1c-989b-758787ff10a1.csv  50162c8a-82e7-4bbe-952f-589aeb7c50ce.csv  523e5820-403c-47c9-a3d6-3226382b8c16.csv  52857191-e782-4efc-98a5-55acd2624937.csv  548d89cc-0ae3-48bb-862a-dd54801939bc.csv  56fb34fc-7fa6-4622-8492-5d1eab86dc9a.csv  5926b792-b5bb-4ecb-9640-4c34df72300c.csv  5a96c7de-e118-4f04-ad19-c1a477af8122.csv  604ac63f-0928-459b-8bbe-15fc77651ef1.csv  (+66 more)
test/: conftest.py  test_input_validate_line_info.py  test_input_validate_worker_preference_list.py  test_order_info_list_elements.py
(+52 files in other folders)
