[metadata]
name = FAIRWork AI Service Cataloge
author = Alexander Nasuta, Sylwia Olbrych, Johanna Lauwigi, Zi Xuan Tung
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    utils
    validation
    demonstrator
    data_generator
    rest
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[flake8]
max-line-length = 160